Bug 366527 - build 1-1 relation between tab and tabpanel for accessible object, r=ginn.chen, a=dsicore